# CalculatorLibrairy

./: .gitignore  .pre-commit-config.yaml  calculator.py  pyproject.toml  requirements.txt  test_calculator.py
.circleci/: config.yml
