[tool.poetry]
name = "calculatorlibrairy"
version = "0.1.0"
description = "calculator to test continuous integration"
authors = ["rcardinaux"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^5.0.4"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
